--- a/public_html/css/main.less
+++ b/public_html/css/main.less
@@ -95,7 +95,7 @@ body {
  #content {
 
  	height: 100%;
- 	min-height: 660px;
+ 	min-height: 680px;
  	position: relative;
  }
 
@@ -550,14 +550,53 @@ body {
 	    transform: rotate(-8deg) scale(0);
 	    width: 75px;
 	}
+}
 
+#hint {
+    color: #fff;
+    font-family: @fontface-roboto-light;
+    font-size: 11px;
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 547px;
+    width: 200px;
+
+    #hint-drag {
+
+    	&:before {
+
+    	width:10px;
+    	height: 8px;
+    	background: url('@{img-path}hint-arrow-l.png') center center no-repeat;
+    	display: block;
+    	content: '';
+    	position: absolute;
+    	top: 3px;
+    	left: -5px;
+    }
+
+    &:after {
+
+    	width:10px;
+    	height: 8px;
+    	background: url('@{img-path}hint-arrow-r.png') center center no-repeat;
+    	display: block;
+    	content: '';
+    	position: absolute;
+    	top: 3px;
+    	right: -5px;
+    }
+    }
 }
 
 /* ---------- Daisy Chain -------------- */
 #daisyChainMaster {
 
 	position: absolute;
-	top: 280px;
+	top: 250px;
 	width: 100%;
 	height: 290px;
 
@@ -571,6 +610,7 @@ body {
 	   // overflow: hidden;
 		padding: 60px 0 0 ;
 		z-index: 2;
+		cursor: url('@{img-path}cursor-hand.png'), auto;
 
 		/* Prevent native touch events on Windows */
 		-ms-touch-action: none;
@@ -587,7 +627,10 @@ body {
 		-o-text-size-adjust: none;
 		text-size-adjust: none; 
 
-		/* Custom Cursor Base 64 Encoded */
+		&.grabCursor {
+
+			cursor: url('@{img-path}cursor-grab.png'), auto;
+		}
 		
 		#daisyChain{
 
@@ -636,6 +679,8 @@ body {
 					-moz-transform-origin : 50%, 50%;
 					-o-transform-origin : 50%, 50%;
 					-webkit-transform-origin : 50%, 50%;
+
+					cursor: url('@{img-path}cursor-message.png'), auto;
 				}
 
 				.daisyInfo {
